# rules_cypress

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  internal_deps.bzl  package.json  pnpm-lock.yaml
.aspect/: config.axl
.bcr/: config.yml  metadata.template.json  source.template.json
.github/workflows/: buildifier.yaml  ci.bazelrc  ci.yaml  publish.yaml  release.yml  release_prep.sh  workspace_snippet.sh
cypress/: BUILD.bazel  BUILD.cypress  BUILD.darwin.cypress  BUILD.linux.cypress  defs.bzl  dependencies.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
cypress/private/: BUILD.bazel  cypress_cli_test.bzl  cypress_test.bzl  toolchains_repo.bzl  versions.bzl
cypress/tests/: package.json  pnpm-lock.yaml  versions_test.bzl
cypress/tests/cli_test/: BUILD  cypress.config.js
cypress/tests/module_test/: BUILD.bazel  cypress.config.js  runner.js
docs/: BUILD.bazel  defs.md  repositories.md  rules.md
e2e/workspace/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  package.json  pnpm-lock.yaml
e2e/workspace/cli_test/: BUILD  cypress.config.ts  tsconfig.json
e2e/workspace/module_test/: BUILD.bazel  cypress.config.js  module_test.cy.js  runner.js
e2e/workspace/server_example/: BUILD.bazel  cypress.config.js  server.js  server_example_test.cy.js
scripts/: BUILD  BUILD.bazel  gen_platform_to_integrity_hash.sh  mirror_releases.sh
tools/: BUILD.bazel  preset.bazelrc
tools/format/: BUILD.bazel
