load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@npm//:defs.bzl", "npm_link_all_packages")

# A version-independent test so `bazel test //...` always has at least one test
# target on every Bazel version in CI (the //tools:preset self-test is skipped
# on non-primary versions). Building the public API surface validates that the
# ruleset loads and analyzes.
build_test(
    name = "public_api_build_test",
    targets = [
        "//cypress:defs",
        "//cypress:extensions",
        "//cypress:repositories",
        "//cypress:toolchain",
    ],
)

buildifier(
    name = "buildifier",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

alias(
    name = "format",
    actual = "//tools/format",
)

npm_link_all_packages(name = "node_modules")
