load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//cypress/private:versions",
        "@aspect_rules_cypress//cypress/private:toolchains_repo",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [
        ":repositories",
        "@aspect_tools_telemetry_report//:defs.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@aspect_rules_cypress//cypress/private:cypress_test",
        "@aspect_rules_js//js:libs",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)

[
    starlark_doc_extract(
        name = module_name + "_docs",
        src = module_name + ".bzl",
        deps = [":" + module_name],
    )
    for module_name in ["extensions", "defs"]
]