load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//cypress/private:versions",
        "@aspect_rules_cypress//cypress/private:toolchains_repo",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":repositories",
        "@aspect_tools_telemetry_report//:defs.bzl",
    ],
)

starlark_doc_extract(
    name = "extensions.doc_extract",
    src = "extensions.bzl",
    deps = [":extensions"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@aspect_rules_cypress//cypress/private:cypress_test",
        "@aspect_rules_js//js:libs",
    ],
)

starlark_doc_extract(
    name = "defs.doc_extract",
    src = "defs.bzl",
    deps = [":defs"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Smoke test that the ruleset's public Starlark builds on every supported Bazel version.
# Also guarantees `bazel test //...` has a test target on Bazel 8/9, where the bazelrc
# preset test (//tools:preset.update_test) is pinned to .bazelversion and skipped.
build_test(
    name = "build_test",
    targets = [
        ":defs.doc_extract",
        ":extensions.doc_extract",
    ],
)
