load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//cypress:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//cypress:__subpackages__"],
)
