load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["@aspect_rules_cypress//cypress:__subpackages__"],
)

bzl_library(
    name = "cypress_module_test",
    srcs = [
        "cypress_module_test.bzl",
    ],
    visibility = ["@aspect_rules_cypress//cypress:__subpackages__"],
)

bzl_library(
    name = "cypress_cli_test",
    srcs = [
        "cypress_cli_test.bzl",
    ],
    visibility = ["@aspect_rules_cypress//cypress:__subpackages__"],
)
