load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["@aspect_rules_cypress//cypress:__subpackages__"],
)

bzl_library(
    name = "cypress_test",
    srcs = [
        "cypress_test.bzl",
    ],
    visibility = ["@aspect_rules_cypress//cypress:__subpackages__"],
)

bzl_library(
    name = "maybe",
    srcs = ["maybe.bzl"],
    visibility = ["//cypress:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//cypress:__subpackages__"],
)
