bazel_dep(name = "aspect_rules_cypress")
local_path_override(
    module_name = "aspect_rules_cypress",
    path = "../..",
)

cypress = use_extension("@aspect_rules_cypress//cypress:extensions.bzl", "cypress")
cypress.toolchain(cypress_version = "12.12.0")
use_repo(cypress, "cypress_toolchains")

register_toolchains("@cypress_toolchains//:all")

bazel_dep(name = "aspect_rules_js", version = "1.41.2", dev_dependency = True)
bazel_dep(name = "bazel_features", version = "1.9.0", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
