bazel_dep(name = "aspect_rules_cypress", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_cypress",
    path = "../..",
)

cypress = use_extension("@aspect_rules_cypress//cypress:extensions.bzl", "cypress", dev_dependency = True)
cypress.toolchain(cypress_version = "13.6.6")
use_repo(cypress, "cypress_toolchains")

register_toolchains("@cypress_toolchains//:all")

bazel_dep(name = "aspect_bazel_lib", version = "2.7.6", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "2.0.0-alpha.6", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    lifecycle_hooks_exclude = [
        # Speed up installation by disabling cypress binary install. Optional.
        "cypress",
    ],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
