# Override http_archive for local testing
local_repository(
    name = "aspect_rules_cypress",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_cypress setup #
######################
# Fetches the rules_cypress dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@aspect_rules_cypress//cypress:dependencies.bzl", "rules_cypress_dependencies")

rules_cypress_dependencies()

load("@aspect_rules_cypress//cypress:repositories.bzl", "cypress_register_toolchains")

cypress_register_toolchains(
    name = "cypress",
    cypress_version = "13.6.6",
)

load("@aspect_rules_js//js:toolchains.bzl", "DEFAULT_NODE_VERSION", "rules_js_register_toolchains")

rules_js_register_toolchains(node_version = DEFAULT_NODE_VERSION)

load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    lifecycle_hooks_exclude = [
        # Speed up installation by disabling cypress binary install. Optional.
        "cypress",
    ],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()
