load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@npm//:prettier/package_json.bzl", prettier = "bin")

package(default_visibility = ["//visibility:public"])

prettier.prettier_binary(
    name = "prettier",
    # Allow the binary to be run outside bazel
    env = {"BAZEL_BINDIR": "."},
)

format_multirun(
    name = "format",
    go = None,
    javascript = ":prettier",
    jsonnet = None,
    shell = None,
    terraform = None,
    yaml = None,
)
