load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

package(default_visibility = ["//:__subpackages__"])

# `manual` keeps the generated `.check` test targets out of `bazel test //...`
# wildcards; Starlark formatting is enforced in CI via `aspect buildifier`.
format_multirun(
    name = "format",
    shell = "@aspect_rules_lint//format:shfmt",
    tags = ["manual"],
    yaml = "@aspect_rules_lint//format:yamlfmt",
)
